--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -84,8 +84,8 @@ BeforeClosing=before closing
 BeforePreview=before viewing in Navigator
 BeforeValidate=before validating the document
 # LOCALIZATION NOTE (SaveFilePrompt, PublishPrompt): Don't translate %title% and %reason% (this is the reason for asking user to close, such as "before closing")
-SaveFilePrompt=Save changes to "%title%" %reason%? 
-PublishPrompt=Save changes to "%title%" %reason%? 
+SaveFilePrompt=Save changes to "%title%" %reason%?
+PublishPrompt=Save changes to "%title%" %reason%?
 SaveFileFailed=Saving file failed!
 
 # Publishing error strings:
@@ -106,13 +106,13 @@ AllFilesPublished=All files published
 FailedFileMsg=%x% of %total% files failed to publish.
 # End-Publishing error strings
 Prompt=Prompt
-# LOCALIZATION NOTE (PromptFTPUsernamePassword): Don't translate %host% 
+# LOCALIZATION NOTE (PromptFTPUsernamePassword): Don't translate %host%
 PromptFTPUsernamePassword=Enter username and password for FTP server at %host%
 RevertCaption=Revert To Last Saved
 Revert=Revert
 SendPageReason=before sending this page
 Send=Send
-AttributesFor=Current attributes for: 
+AttributesFor=Current attributes for:
 MissingImageError=Please enter or choose an image of type gif, jpg, png, tif, eps, pdf, or svg.
 EmptyHREFError=Please choose a location to create a new link.
 LinkText=Link Text
@@ -151,7 +151,7 @@ PercentOfTable=% of table
 untitled=untitled
 ShowToolbar=Show Toolbar
 HideToolbar=Hide Toolbar
-ImapError=Unable to load image 
+ImapError=Unable to load image
 ImapCheck=\nPlease select a new location (URL) and try again.
 SaveToUseRelativeUrl=Relative URLs can only be used on pages which have been saved
 NoNamedAnchorsOrHeadings=(No named anchors or headings in this page)
@@ -197,7 +197,7 @@ opentypefont=Opentype font
 fontcolor=font color
 fontsize=font size
 rawtex=raw TeX
-htmlfield=HTML field
+htmlfield=XHTML field
 note=note
 CrossRef=cross reference
 functiongraph=function graph
@@ -234,10 +234,10 @@ AdvancedEditForCellMsg=Advanced Edit is unavailable when multiple cells are sele
 ObjectProperties=%obj% Properties...
 # LOCALIZATION NOTE This character must be in the above string and not confict with other accesskeys in Format menu
 ObjectPropertiesAccessKey=o
-# LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tablejoincells.accesskey" 
+# LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tablejoincells.accesskey"
 # letter as defined in editorOverlay.dtd
 JoinSelectedCells=Join Selected Cells
-# LOCALIZATION NOTE (JoinCellToRight): This variable should contain the "tablejoincells.accesskey" 
+# LOCALIZATION NOTE (JoinCellToRight): This variable should contain the "tablejoincells.accesskey"
 # letter as defined in editorOverlay.dtd
 JoinCellToRight=Join with Cell to the Right
 JoinCellAccesskey=j
