--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -439,11 +439,11 @@
           \msitag{^^0a}%
           \msiopentag{address}{<address>}%
           \msiopentag{bodyText}{<bodyText>}%
-          \def\\{\par}%
+          %\def\\{\par}%
           \ignorespaces}
           
    \def\and{\msiclosetag{address}{</address>}%
-            \msiclosetag{author}{</author>}\msitag{^^0a}\msiopentag{author}{<author>}}%
+            \msiclosetag{author}{</author>}\msitag{^^0a}\msiopentag{author}{<author>}\msiopentag{bodyText}{<bodyText>}}%
    \msitag{^^0a}%
    \msiopentag{author}{<author>}#1\msiclosetag{address}{</address>}\msiclosetag{author}{</author>}%
   \endgroup
