Wrote the text for the credits tab and the licenses tab for the About dialog. Changed the location of the written notes for the sidebar so that 'beta' is no longer in the URL. Wrote new notes for the release. Took out the ability to put plots inline or in a position enabled by wrapfig. Did the same in the plot preferences. Fixed various glitches with the licensing dialogs for non-SWP products.

--- a/prince/base/locale/en-us/dialogs/licenseDialog.dtd
+++ b/prince/base/locale/en-us/dialogs/licenseDialog.dtd
@@ -1,1 +1,5 @@
 <!ENTITY licenseDialog.title "License status" >
+<!ENTITY verbiage2 "To renew your license or to buy a new license, go to the MacKichan Software online store at http://store.mackichan.com">
+<!ENTITY prodword2sw "Word">
+<!ENTITY prodword2swp "WorkPlace">
+<!ENTITY prodword2snb "Notebook">
