--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -3363,7 +3363,7 @@
 
 \def\msi@begin@verbatim{%
    \@make@braces@other
-   \def\par{\char10}
+   \def\par{\char10\relax}
    \obeylines
    \obeyspaces
    \catcode`\\=12
