--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -187,7 +187,7 @@
 
 
 \def\MSIMathQuote#1{%
-   \expandafter\def\csname#1\endcsname{\expandafter\string\csname#1\endcsname\@ifnextchar*{}{\char32}}}
+   \expandafter\def\csname#1\endcsname{\expandafter\string\csname#1\endcsname\@ifnextchar*{}{{\char32\relax}}}}
 
 
 \def\left#1{\string\left#1}
