--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -622,7 +622,7 @@
   \let\@ifdefinable\@@ifdefinable
   #2}
 
-\def\renewenvironment{\@star@or@long\renew@environment}
+%\def\renewenvironment{\@star@or@long\renew@environment}
 \def\renew@environment#1{%
   \@ifundefined{#1}%
      {\@latex@error{Environment #1 undefined}\@ehc
