--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -530,7 +530,22 @@
 
 
 % Forms of the \newenvironment command
+
+\newif\if@renew
+\@renewfalse
+
+\def\@hidden#1{%
+   \advance\msi@output by 1\relax
+   #1%
+   \advance\msi@output by -1\relax
+}
+
 \def\newenvironment{%
+   \@hidden{\@renewfalse}
+   \@ifnextchar*{\@newenvironment{*}}{\@newenvironment{}}}
+
+\def\renewenvironment{%
+   \@renewtrue
    \@ifnextchar*{\@newenvironment{*}}{\@newenvironment{}}}
 
  
@@ -542,8 +557,11 @@
    \@ifnextchar[{\@newenv@b{#1}{#2}[#3]}{\@newenv@b{#1}{#2}[#3][]}}
 
 \def\@newenv@b#1#2[#3][#4]#5#6{%
-    %\expandafter\msi@preamble\expandafter{\the\msi@preamble^^0a\newenvironment#1{#2}}%
-    \msitopreambleextra{^^0a\newenvironment#1{#2}}
+    \if@renew
+       \msitopreambleextra{^^0a\renewenvironment#1{#2}}
+    \else
+       \msitopreambleextra{^^0a\newenvironment#1{#2}}
+    \fi
     \def\msi@tmp{#3}%
     \ifx\msi@tmp\@empty
     \else
