--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -492,6 +492,12 @@
   \msitag{^^0a<theoremstyle style="#1"/>}}
 \theoremstyle{plain}
 
+\def\msi@envWithLeadin#1[#2]{%
+   \msiopentag{#1}{<#1 leadInType="custom">}\msitag{<envLeadIn><bodyText>#2</bodyText></envLeadIn>}\msihmode}
+
+\def\msi@envWithOutLeadin#1{%
+   \msiopentag{#1}{<#1>}\msihmode}
+
 
 % should check for second optional
 \def\out@newtheorema#1[#2]#3{%
@@ -499,18 +505,14 @@
 %  \expandafter\msi@preamble\expandafter{\the\msi@preamble^^0a\newtheorem{#1}[#2]{#3}}
   \msitopreambleextra{^^0a\newtheorem{#1}[#2]{#3}}
   \@ifundefined{msi@begin@#1}%
-    {\@namedef{msi@begin@#1}{\msi@br\msiopentag{#1}{<#1>}\msihmode}%
+    {\@namedef{msi@begin@#1}{\msi@br\@ifnextchar[{\msi@envWithLeadin{#1}}{\msi@envWithLeadin{#1}}}%
      \@namedef{msi@end@#1}{\msi@br\msiclosetag{#1}{</#1>}}}%
     {}}
 
 \def\out@newtheoremb#1#2{%
   \endgroup% started in \newtheorem
   \@ifundefined{msi@begin@#1}%
-    {%\msitag{^^0a<newtheorem }%
-     %\if@newtheoremstar\msitag{star="1" }\fi% 
-     %\msitag{name="#1" style = "}\msi@currentthmstyle\msitag{" label="#2"/>}%
-%     \expandafter\msi@preamble\expandafter{\the\msi@preamble^^0a\newtheorem{#1}{#2}}
-     \msitopreambleextra{^^0a\newtheorem{#1}{#2}}
+    {\msitopreambleextra{^^0a\newtheorem{#1}{#2}}
      \@namedef{msi@begin@#1}{\msi@br\msiopentag{#1}{<#1>}\msihmode}%
      \@namedef{msi@end@#1}{\msi@br\msiclosetag{#1}{</#1>}}}%
     {}}
@@ -518,10 +520,7 @@
 %% recheck this one
 \def\out@newtheoremc#1#2[#3]{%
   \endgroup% started in \newtheorem
-  %\msitag{^^0a<newtheorem }
-  %\if@newtheoremstar\msitag{star="1" }\fi% 
-  %\msitag{name="#1" style = "}\msi@currentthmstyle\msitag{" label="#2"/>}%
-  \expandafter\msi@preamble\expandafter{\the\msi@preamble^^0a\newtheorem{#1}{#2}[#3]}%
+  \msitopreambleextra{^^0a\newtheorem{#1}{#2}[#3]}
   \@ifundefined{msi@begin@#1}%
     {\@namedef{msi@begin@#1}{\msi@br\msiopentag{#1}{<#1>}\msihmode}%
      \@namedef{msi@end@#1}{\msi@br\msiclosetag{#1}{</#1>}}}%
