--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -51,7 +51,7 @@
 \MSIEmptyElement[hspace type="thickSpace"]{;}{}
 \MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}{}
 \MSIEmptyElement[hspace type="negativeThinSpace"]{!}{}
-\MSIEmptyElement[hspace type="noIndent"]{noindent}{}
+\MSIEmptyElement[hspace type="noIndent" dim="0.0em"]{noindent}{}
 \MSIEmptyElement[vspace type="smallSkip" dim="3pt"]{smallskip}{T}
 \MSIEmptyElement[vspace type="mediumSkip" dim="6pt"]{medskip}{T}
 \MSIEmptyElement[vspace type="bigSkip" dim="12pt"]{bigskip}{T}
