--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -2223,38 +2223,32 @@
 
 
 \def\msi@begin@figure{%
-  \@ifnextchar[{\msi@begin@figureA}{\msi@begin@figureB}}
+  \msihmode\@ifnextchar[{\msi@begin@figureA}{\msi@begin@figureB}}
 
 
 \def\msi@begin@figureA[#1]{%
-   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f" ltxfloat="#1" >}%
-}
+   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f" ltxfloat="#1" >}}
 
 \def\msi@begin@figureB{%
-   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f">}%
-}
+   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f">}}
 
 \def\msi@end@figure{%
-   \msiclosetag{msiframe}{</msiframe>}%
-}
+   \msiclosetag{msiframe}{</msiframe>}}
 
 
 
 \def\msi@begin@table{%
-  \@ifnextchar[{\msi@begin@tableA}{msi@begin@tableB}}
+  \msihmode\@ifnextchar[{\msi@begin@tableA}{msi@begin@tableB}}
 
 
 \def\msi@begin@tableA[#1]{%
-   \msiopentag{msiframe}{<msiframe frametype="table" pos="float" ltxfloat="#1">}%
-}
+   \msiopentag{msiframe}{<msiframe frametype="table" pos="float" ltxfloat="#1">}}
 
 \def\msi@begin@tableB{%
-   \msiopentag{msiframe}{<msiframe frametype="table" pos="float">}%
-}
+   \msiopentag{msiframe}{<msiframe frametype="table" pos="float">}}
 
 \def\msi@end@table{%
-   \msiclosetag{msiframe}{</msiframe>}%
-}
+   \msiclosetag{msiframe}{</msiframe>}}
 
 
 \def\caption{\msi@caption}
@@ -2262,8 +2256,7 @@
 \def\msi@caption#1{%
   \msiopentag{caption}{<caption align="bottom">}%
   #1%
-  \msiclosetag{caption}{</caption>}%
-}
+  \msiclosetag{caption}{</caption>}}
 
 \bgroup
   \@make@braces@other
