--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -359,7 +359,7 @@
    \msitag{/>}
 }
 
-\def\FRAME{\begingroup
+\def\FRAME{\msihmode\begingroup
              \catcode`\&=13
              \catcode`\~=11\relax\@FRAME}
 
