Change tooltop for \diamond from smalldiamond to diamond (match V5.5).

--- a/prince/base/locale/en-us/mathmlOverlay.dtd
+++ b/prince/base/locale/en-us/mathmlOverlay.dtd
@@ -255,7 +255,7 @@
 <!ENTITY symbolunrhd.tooltip      "unrhd">
 <!ENTITY symbolbigtriangledown.tooltip    "bigtriangledown">
 <!ENTITY symbolbigtriangleup.tooltip      "bigtriangleup">
-<!ENTITY symbolsmalldiamond.tooltip     "smalldiamond">
+<!ENTITY symbolsmalldiamond.tooltip     "diamond">
 <!ENTITY symboldagger.tooltip      "dagger">
 <!ENTITY symbolddagger.tooltip    "ddagger">
 <!ENTITY symbolboxplus.tooltip    "boxplus">
