--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1727,7 +1727,7 @@
    \ifmmode
      \string\vspace\@brace{#1}%
    \else
-     \msitag{<vspace type="customSpace" dim="#1" atEnd="false"></vspace>}%
+     \msihmode\msitag{<vspace type="customSpace" dim="#1" atEnd="false"></vspace>}%
    \fi
 }
 
@@ -1735,7 +1735,7 @@
    \ifmmode
      \string\vspace\@brace{#2}%
    \else
-     \msitag{<vspace type="customSpace" dim="#2" atEnd="true"></vspace>}%
+     \msihmode\msitag{<vspace type="customSpace" dim="#2" atEnd="true"></vspace>}%
    \fi
 }
 
