A reworking of BibTeX. It now uses the TeX defaults for bib and bst file locations when the pref dirs are empty. It uses the preferred bib location if it is set. Bib and bst are not required to be adjacent. Currently this ignores the pref bst dir location. It works on the Mac. I will now go and update the required Win files.

--- a/prince/base/locale/en-us/dialogs/preferences.dtd
+++ b/prince/base/locale/en-us/dialogs/preferences.dtd
@@ -60,7 +60,10 @@
 <!ENTITY bibTeXExecutable.accesskey "B">
 <!ENTITY browseBibTeXExecutable.label "Browse">
 <!ENTITY browseBibTeXExecutable.accesskey "r">
+<!ENTITY defBibChoice "Default bibliography choice">
+<!ENTITY bibDirInstructions "To use the TeX defaults, leave the next two items blank.">
 <!ENTITY bibTeXDatabaseDir.label "BibTeX database directory">
+<!ENTITY bibTeXDirs.label "BibTeX database directory">
 <!ENTITY bibTeXDatabaseDir.accesskey "d">
 <!ENTITY browseBibTeXDatabaseDir.label "Browse">
 <!ENTITY browseBibTeXDatabaseDir.accesskey "o">
